--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Vaültn</title>
+        <title>Vaültn: Next-Level Code Collab</title>
         <meta name="description" content="Streamline your code organization, access snippets on-the-go, and collaborate effortlessly with Vaültn.">
-        <meta name="theme-color" content="#741ff5">
-
+        
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
