chore: updated app icons + README.md

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Vaültn: Next-Level Code Collab</title>
+        <title>Vaültn</title>
         <meta name="description" content="Streamline your code organization, access snippets on-the-go, and collaborate effortlessly with Vaültn.">
         
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
