fix: uncommented social icons

--- a/index.html
+++ b/index.html
@@ -582,14 +582,14 @@
                                     <img class="uk-visible dark:uk-hidden" width="200" src="assets/images/vaultn-dark.png" alt="Vaültn"> <img class="uk-hidden dark:uk-visible" width="200" src="assets/images/vaultn-light.png" alt="Vaültn">
                                 </a>
                                 <p class="uk-text-xlarge@m uk-margin-medium-top@m">Unleash your code's potential.</p>
-                                <!-- <ul class="uk-subnav uk-subnav-small uk-flex-center uk-text-gray-40 uk-margin-top uk-margin-medium-top@m">
+                                <ul class="uk-subnav uk-subnav-small uk-flex-center uk-text-gray-40 uk-margin-top uk-margin-medium-top@m">
                                     <li>
                                         <a href="https://twitter.com/VaultnHQ"><span class="uk-icon uk-icon-medium@m unicon-logo-twitter"></span></a>
                                     </li>
                                     <li>
                                         <a href="https://github.com/VaultnHQ"><span class="uk-icon uk-icon-medium@m unicon-logo-github"></span></a>
                                     </li>
-                                </ul> -->
+                                </ul>
                             </div>
                         </div>
                     </div>
